tests/suite/snapshots/suite__check__tests__check__bad-add1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-add1.xi:2:14]
   │
 2 │     x:int = 1 + false
   ·                 ──┬──  
   ·                   ╰──── Expected int but found bool
───╯

