tests/suite/snapshots/suite__check__tests__check__bad-add2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:17 error:Expected int but found int[]
