tests/suite/snapshots/suite__check__tests__check__bad-add3.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:13 error:Expected int but found int[]
