tests/suite/snapshots/suite__check__tests__check__bad-arg-shadowing.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
2:5 error:Name already bound in environment
