tests/suite/snapshots/suite__check__tests__check__bad-array-size1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
5:10 error:Expected int but found int[]
