tests/suite/snapshots/suite__check__tests__check__bad-array-size2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
4:10 error:Expected int but found bool
