tests/suite/snapshots/suite__check__tests__check__bad-assign-procedure.xi.snap
---
source: tests/suite/check.rs
assertion_line: 21
expression: Snapshot(context)
---
4:5 error:Cannot initialize with a procedure
